# Programming-Basics-with-CPP-09-2024

./: .gitignore  CMakeLists.txt  README.md
01_FirstStepsInProgramming/exercise/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp
01_FirstStepsInProgramming/lab/: 02.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp
01_first_steps_in_programming/lab/: 03.cpp
02_ConditionalStatements/exercise/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp
02_ConditionalStatements/lab/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp
03_MoreComplexConditionalStatements/lab/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp
