cmake_minimum_required(VERSION 3.29)
project(Programming_Basics_with_C___09_2024)

set(CMAKE_CXX_STANDARD 20)

# Create separate executables for each .cpp file
add_executable(exe_01 01_FirstStepsInProgramming/lab/01.cpp
        01_FirstStepsInProgramming/exercise/01.cpp)
add_executable(exe_02 01_FirstStepsInProgramming/lab/02.cpp
        01_FirstStepsInProgramming/exercise/01.cpp)
add_executable(exe_03 01_FirstStepsInProgramming/lab/03.cpp
        01_FirstStepsInProgramming/exercise/01.cpp)
add_executable(exe_04 01_FirstStepsInProgramming/lab/04.cpp
        01_FirstStepsInProgramming/exercise/01.cpp)
add_executable(exe_05 01_FirstStepsInProgramming/lab/05.cpp
        01_FirstStepsInProgramming/exercise/01.cpp)
add_executable(exe_06 01_FirstStepsInProgramming/lab/06.cpp
        01_FirstStepsInProgramming/exercise/01.cpp)
add_executable(exe_07 01_FirstStepsInProgramming/lab/07.cpp
        01_FirstStepsInProgramming/exercise/01.cpp)
add_executable(exe_08 01_FirstStepsInProgramming/lab/08.cpp
        01_FirstStepsInProgramming/exercise/01.cpp)
add_executable(exe_09 01_FirstStepsInProgramming/lab/09.cpp
        01_FirstStepsInProgramming/exercise/01.cpp)